<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_state_edittext_outline"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewH16SemiBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="8dp"
                    android:text="Belajar Huruf Vokal"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/placeholder_belajar_vokal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_8sdp">

                    <include
                        android:id="@+id/txt_a"
                        layout="@layout/item_riwayat" />

                    <include
                        android:id="@+id/txt_i"
                        layout="@layout/item_riwayat" />

                    <include
                        android:id="@+id/txt_u"
                        layout="@layout/item_riwayat" />

                    <include
                        android:id="@+id/txt_e"
                        layout="@layout/item_riwayat" />

                    <include
                        android:id="@+id/txt_o"
                        layout="@layout/item_riwayat" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:background="@drawable/normal_state_edittext_outline"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewH16SemiBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="8dp"
                    android:text="Belajar Suku Kata"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/placeholder_belajar_suku"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_8sdp">

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:background="@drawable/normal_state_edittext_outline"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewH16SemiBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="8dp"
                    android:text="Latihan Suku Kata"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/placeholder_latihan_suku"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_8sdp">

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:background="@drawable/normal_state_edittext_outline"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewH16SemiBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="8dp"
                    android:text="Belajar Suku Kata"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/placeholder_latihan_baca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_8sdp">

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>