...
                app:placeholderText="@string/masukan_nama_lengkap"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/_4sdp"
                android:textSize="@dimen/_14ssp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/_14ssp"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:background="@drawable/normal_state_edittext_outline"
...
                app:placeholderText="Masukan Kelas"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/_4sdp"
                android:textSize="@dimen/_14ssp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_kelas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14ssp"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:background="@drawable/normal_state_edittext_outline"
...
                app:placeholderText="Masukan No Absen"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/_4sdp"
                android:textSize="@dimen/_14ssp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_noabsen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14ssp"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:inputType="phone"
...
                app:placeholderText="Masukan Asal Sekolah"
                android:textSize="@dimen/_14ssp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_asal_sekolah"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/_14ssp"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:background="@drawable/normal_state_edittext_outline"
...
                app:placeholderText="Masukan Tahun Masuk Sekolah"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/_4sdp"
                android:textSize="@dimen/_14ssp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_tahun_masuk_sekolah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textSize="@dimen/_14ssp"
                    android:background="@drawable/normal_state_edittext_outline"
                    android:paddingVertical="12dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btn_save_student"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/_250sdp"
                android:background="@drawable/button_rounded_purple_10px"
                android:fontFamily="@font/pjs_medium"
                android:layout_height="wrap_content"
...
