<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar_action"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:id="@+id/placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginBottom="@dimen/_100sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_desc"
                style="@style/TextViewH16Regular"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="Pilih gabungan huruf"
               />

            <TextView
                android:id="@+id/txt_abjad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pjs_bold"
                tools:text="@string/a"
                android:textColor="@color/purple_500"
                android:textSize="128sp" />

            <include
                android:id="@+id/opta"
                layout="@layout/item_belajar_suku" />

            <include
                android:id="@+id/opti"
                layout="@layout/item_belajar_suku" />

            <include
                android:id="@+id/optu"
                layout="@layout/item_belajar_suku" />

            <include
                android:id="@+id/opte"
                layout="@layout/item_belajar_suku" />

            <include
                android:id="@+id/opto"
                layout="@layout/item_belajar_suku" />


            <Button
                android:id="@+id/btn_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button_rounded_green_10px"
                android:fontFamily="@font/pjs_medium"
                android:paddingVertical="@dimen/_8sdp"
                android:text="Selesai"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="21dp" />

        </LinearLayout>



    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>
